syntax = "proto3";
package flowsys;

option go_package = "github.com/sheacloud/flowsys/schema";

message Flow {
  bytes SourceIPv4Address = 1;
  bytes DestinationIPv4Address = 2;

  uint32 SourcePort = 3;
  uint32 DestinationPort = 4;

  uint32 Protocol = 5;

  uint64 FlowStartMilliseconds = 6;
  uint64 FlowEndMilliseconds = 7;

  uint64 FlowOctetCount = 8;
  uint64 FlowPacketCount = 9;

  uint64 ReverseFlowOctetCount = 10;
  uint64 ReverseFlowPacketCount = 11;

  GeoIPData SourceGeoIPData = 12;
  GeoIPData DestinationGeoIPData = 13;

  string SourceDomainName = 14;
  string DestinationDomainName = 15;
}

message GeoIPData {
  string CityName = 1;
  string ContinentCode = 2;
  string ContinentName = 3;
  string CountryIsoCode = 4;
  string CountryName = 5;
  bool CountryInEU = 6;
  double Latitude = 7;
  double Longitude = 8;
  uint32 MetroCode = 9;
  string TimeZone = 10;
  string PostalCode = 11;
  repeated Subdivision Subdivisions = 12;
  bool IsAnonymousProxy = 13;
  bool IsSatelliteProvider = 14;
}

message Subdivision {
  string IsoCode = 1;
  string Name = 2;
}
